Copy colors does not work properly (V value wrong range in Color Balance Node) #32418

Closed
opened 2012-08-27 09:16:27 +02:00 by Heiko Schmidt · 7 comments

%%%Hi,

I tried to copy colors from property panel (material tab) to Color Balance Node and noticed a different result. I assume it is the V value in Color Balance Node which is 0-2 instead 0-1.%%%

%%%Hi, I tried to copy colors from property panel (material tab) to Color Balance Node and noticed a different result. I assume it is the V value in Color Balance Node which is 0-2 instead 0-1.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I noticed the same for the Hue Correct Node.%%%

%%%I noticed the same for the Hue Correct Node.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Hi Brecht,

I still get different results when copying colors in the color input fields of the 'Color Balance' Node. For example if I copy a RGB (0,5 0,5 0,5) in one of the three 'Color Balance' Node input fields I get there an RGB (0,736 0,736 0,736).

Maybe I do miss some background knowledge here about that node but why is the range of the values between 0-2 instead 0-1? This seems to be only here and by the 'Hue Saturation Value' Node the case (here only for the S and V value) not the Hue Correct Node as wrongly said in message #1.

When I talk about a range between 0 and 1, I mean when I use the color input fields as slider by just using the mouse. It is of course possible to directly type in larger values then 1.%%%

%%%Hi Brecht, I still get different results when copying colors in the color input fields of the 'Color Balance' Node. For example if I copy a RGB (0,5 0,5 0,5) in one of the three 'Color Balance' Node input fields I get there an RGB (0,736 0,736 0,736). Maybe I do miss some background knowledge here about that node but why is the range of the values between 0-2 instead 0-1? This seems to be only here and by the 'Hue Saturation Value' Node the case (here only for the S and V value) not the Hue Correct Node as wrongly said in message #1. When I talk about a range between 0 and 1, I mean when I use the color input fields as slider by just using the mouse. It is of course possible to directly type in larger values then 1.%%%

%%%I corrected the copying when you go over the color box, press ctrl+c and then do ctrl+v over another.

The values are indeed different, and that's because they are in different color spaces. The material colors are in scene linear color space, while the color balance values are not really colors by themselves, they are parameters for color correction.

If for example Gain was limited to 1.0, you could only use the slider to make the colors darker, not to make them brighter since that requires values > 1.0. So it makes sense to have different default limits because they are used quite differently.%%%

%%%I corrected the copying when you go over the color box, press ctrl+c and then do ctrl+v over another. The values are indeed different, and that's because they are in different color spaces. The material colors are in scene linear color space, while the color balance values are not really colors by themselves, they are parameters for color correction. If for example Gain was limited to 1.0, you could only use the slider to make the colors darker, not to make them brighter since that requires values > 1.0. So it makes sense to have different default limits because they are used quite differently.%%%
Author

%%%Ok thanks for the explanation, learned something new today.%%%

%%%Ok thanks for the explanation, learned something new today.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32418
No description provided.