Fix #32418: color copy/paste between gamma and linear color buttons gave wrong results, now it does the conversion.